Contact + work experiences seems fine for a step 1

--- a/src/_data/languages.yml
+++ b/src/_data/languages.yml
@@ -1,6 +1,6 @@
-fr:
-  label: Français
-  icon: 🇫🇷
-en:
-  label: English
-  icon: 🇬🇧
+label:
+  en: English
+  fr: Français
+icon:
+  en: 🇬🇧
+  fr: 🇫🇷
