--- a/src/_config.yml
+++ b/src/_config.yml
@@ -25,8 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my online multi-language resume as github pages.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username:  wasta-geek
+github_username:  wasta_geek
 
 # Build settings
 theme: minima
@@ -36,6 +35,10 @@ plugins:
 ## Theme options
 show_downloads: true
 google_analytics: [Your Google Analytics tracking ID]
+
+available_languages:
+  - fr
+  - en
 
 # Exclude from processing.
 # The following items will not be processed, by default.
