--- a/src/_config.yml
+++ b/src/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my online multi-language resume as github pages.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  wasta_geek
+github_username:  wasta-geek
 
 # Build settings
 theme: minima
