--- a/src/_data/contact.yml
+++ b/src/_data/contact.yml
@@ -1,2 +1,12 @@
 name: "Corentin Ducatez"
 birth_date: "1996-09-09"
+location: "France - Lille"
+mobile: "+33 7 81 73 48 78"
+email: "corentin_ducatez@hotmail.fr"
+profile:
+  en: "After 2 years spent as a software developper (C++ / Python), I have then oriented myself to a internal job as \"Devops-oriented Engineer\" for 1 year.\
+  During this phase I had the opportunity to improve my skills about various subjects like Docker, CI/CD pipelines and AWS.<br>\
+  I'm currently looking to join a team where I could take benefits of my learned skills, improves them and discovers new horizons."
+  fr: "Après une expérience professionnelle de 2 ans en tant que développeur logiciel (C++ / Python), j'ai par la suite évolué en interne vers un poste de \"Ingénieur orienté Devops\" pendant 1 an.\
+  A travers cette expérience j'ai pu monté en compétences sur des sujets variés tels que Docker, les Pipelines CI/CD et AWS.<br>\
+  Je cherche actuellement à rejoindre une équipe dans laquelle je pourrais mettre à profit mes compétences actuelles, les améliorer et continuer à découvrir de nouveaux horizons."
