--- a/src/_config.yml
+++ b/src/_config.yml
@@ -38,3 +38,7 @@ available_languages:
 ## Github pages options
 domain: corentin-ducatez-curriculum.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://corentin-ducatez-curriculum.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+
+sass:
+  sass_dir: _sass
+  style: compressed
