--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -5,22 +5,21 @@ on:
       - 'docs/**'
 
 env:
-  IMAGE_NAME: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
   SCRIPT_PATH: /home/pptruser/puppeteer_build_pdf.js
 
 jobs:
   build_docker_image:
-    runs-on: ${{ env.IMAGE_NAME }}
+    runs-on: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Build FR pdf
         run: |
-          node ${{ SCRIPT_PATH }} language=fr
+          node ${{ env.SCRIPT_PATH }} language=fr
       - name: Build EN pdf
         run: |
-          node ${{ SCRIPT_PATH }} language=en
+          node ${{ env.SCRIPT_PATH }} language=en
       - name: Commit files
         run: |
           git config --local user.email "42103905+github-actions[bot]@users.noreply.github.com"
