--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -8,7 +8,7 @@ env:
   SCRIPT_PATH: /home/pptruser/puppeteer_build_pdf.js
 
 jobs:
-  build_docker_image:
+  build_pdf_files:
     runs-on: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
     steps:
       - uses: actions/checkout@v3
