Fix runs-on / container part in workflow file

--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -9,7 +9,8 @@ env:
 
 jobs:
   build_pdf_files:
-    runs-on: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+    runs-on: ubuntu-latest
+    container: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
     steps:
       - uses: actions/checkout@v3
         with:
