Force to rebuild pdf each time the docker image is built

--- a/.github/workflows/build_puppeteer_image.yml
+++ b/.github/workflows/build_puppeteer_image.yml
@@ -33,3 +33,6 @@ jobs:
         with:
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+  call-build-workflow:
+    # Call build pdf workflow everytime the docker image is being built
+    uses: ./.github/workflows/build_pdf.yml
