--- a/.github/workflows/build_puppeteer_image.yml
+++ b/.github/workflows/build_puppeteer_image.yml
@@ -35,4 +35,4 @@ jobs:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
   call-build-workflow:
     # Call build pdf workflow everytime the docker image is being built
-    uses: ./.github/workflows/build_pdf.yml
+    uses: "./.github/workflows/build_pdf.yml"
