--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -15,11 +15,11 @@ jobs:
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Build FR pdf
-        uses: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+        uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
         with:
           arg: ls && pwd
       - name: Build EN pdf
-        uses: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+        uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
         with:
           args: node ${{ env.SCRIPT_PATH }} language=en
       - name: Commit files
