--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -14,19 +14,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build FR pdf
         uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         with:
           arg: ls && pwd
       - name: Build EN pdf
         uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+        credentials:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: node ${{ env.SCRIPT_PATH }} language=en
       - name: Commit files
