--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -10,24 +10,16 @@ env:
 jobs:
   build_pdf_files:
     runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Build FR pdf
-        uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
-        credentials:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          arg: ls && pwd
+        run: node ${{ env.SCRIPT_PATH }} language=fr
       - name: Build EN pdf
-        uses: docker://ghcr.io/wasta-geek/puppeteer_build_pdf:latest
-        credentials:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: node ${{ env.SCRIPT_PATH }} language=en
+        run: node ${{ env.SCRIPT_PATH }} language=en
       - name: Commit files
         run: |
           git config --local user.email "42103905+github-actions[bot]@users.noreply.github.com"
