Run build_docker_pdf only after the end of build_docker_image job

--- a/.github/workflows/build_puppeteer_image.yml
+++ b/.github/workflows/build_puppeteer_image.yml
@@ -34,5 +34,6 @@ jobs:
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
   call-build-workflow:
+    needs: build_docker_image
     # Call build pdf workflow everytime the docker image is being built
     uses: "./.github/workflows/build_pdf.yml"
