--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -13,12 +13,10 @@ env:
   SCRIPT_PATH: /home/puppeteer_build_pdf.js
 
 jobs:
-  build_pdf_files:
-    runs-on: ubuntu-latest
-    container: 
-      image: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+  set_environment_name:
     steps:
       - name: Some check on branch
+        id: branch_check
         run: |
           echo "Running on branch ${{ github.ref }}"
           if [ "${{ github.ref }}" = "refs/heads/master" ]; then
@@ -26,8 +24,13 @@ jobs:
           else
             echo "::set-output name=env_name::Staging"
           fi
-      - name: test stuff
-        run: echo ${{ env.env_name }}
+    outputs:
+      environment_name: ${{ steps.branch_check.outputs.env_name }}
+  build_pdf_files:
+    runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
+    steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
@@ -37,14 +40,19 @@ jobs:
         run: node ${{ env.SCRIPT_PATH }} language=en
   upload_pdf_to_s3:
     runs-on: ubuntu-latest
+    needs:
+      - build_pdf_files
+      - set_environment_name
     container:
       image: amazon/aws-cli
+    environment:
+      name: ${{needs.set_environment_name.outputs.environment_name}}
     steps:
       - name: Register with credentials
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}"
-          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}"
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ environment.name }}
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ environment.name }}
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ environment.name }}
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ environment.name }}
       - name: Upload FR pdf
         run: aws s3api list-object-versions --bucket ${{ env.BUCKET_NAME }}
