--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -14,6 +14,7 @@ env:
 
 jobs:
   set_environment_name:
+    runs-on: ubuntu-latest
     steps:
       - name: Some check on branch
         id: branch_check
@@ -50,9 +51,9 @@ jobs:
     steps:
       - name: Register with credentials
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ environment.name }}
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ environment.name }}
-          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ environment.name }}
-          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ environment.name }}
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ env.environment.name }}
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ env.environment.name }}
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ env.environment.name }}
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ env.environment.name }}
       - name: Upload FR pdf
         run: aws s3api list-object-versions --bucket ${{ env.BUCKET_NAME }}
