--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -51,9 +51,9 @@ jobs:
     steps:
       - name: Register with credentials
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ github.jobs[${{ GITHUB_JOB }}] }}
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ github.jobs[${{ GITHUB_JOB }}] }}
-          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ github.jobs[${{ GITHUB_JOB }}] }}
-          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ github.jobs[${{ GITHUB_JOB }}] }}
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ github.jobs[github.job].environment }}
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ github.jobs[github.job].environment }}
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ github.jobs[github.job].environment }}
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ github.job.environment }}
       - name: Upload FR pdf
         run: aws s3api list-object-versions --bucket ${{ secrets.BUCKET_NAME }}
