--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -52,8 +52,8 @@ jobs:
       - name: test
         run: |
           echo ${{ github.job }}
-          echo ${{ github.job.environment }}
-          echo ${{ github.jobs }}
+          echo ${{ environment.name }}
+          echo ${{ upload_pdf_to_s3.environment.name }}
           echo ${{ github.jobs[github.job] }}
           echo ${{ github.jobs[github.job].environment }}
     #   - name: Register with credentials
