--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -40,26 +40,21 @@ jobs:
       - name: Build EN pdf
         run: node ${{ env.SCRIPT_PATH }} language=en
   upload_pdf_to_s3:
+    id: upload_pdf_to_s3
     runs-on: ubuntu-latest
     needs:
       - build_pdf_files
       - set_environment_name
-    # container:
-    #   image: amazon/aws-cli
+    container:
+      image: amazon/aws-cli
     environment:
       name: ${{needs.set_environment_name.outputs.environment_name}}
     steps:
-      - name: test
+      - name: Register with credentials
         run: |
-          echo ${{ github.job }}
-          echo ${{ upload_pdf_to_s3.environment.name }}
-          echo ${{ github.jobs[github.job] }}
-          echo ${{ github.jobs[github.job].environment }}
-    #   - name: Register with credentials
-    #     run: |
-    #       aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ github.jobs[github.job].environment }}
-    #       aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ github.jobs[github.job].environment }}
-    #       aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ github.jobs[github.job].environment }}
-    #       aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ github.job.environment }}
-    #   - name: Upload FR pdf
-    #     run: aws s3api list-object-versions --bucket ${{ secrets.BUCKET_NAME }}
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
+      - name: Upload FR pdf
+        run: aws s3api list-object-versions --bucket ${{ secrets.BUCKET_NAME }}
