--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -39,6 +39,11 @@ jobs:
         run: node ${{ env.SCRIPT_PATH }} language=fr
       - name: Build EN pdf
         run: node ${{ env.SCRIPT_PATH }} language=en
+      - name: Archive PDF files
+        uses: actions/upload-artifact@v3
+        with:
+          name: pdf-files
+          path: /home/*.pdf
   upload_pdf_to_s3:
     runs-on: ubuntu-latest
     needs:
@@ -47,13 +52,19 @@ jobs:
     container:
       image: amazon/aws-cli
     environment:
-      name: ${{needs.set_environment_name.outputs.environment_name}}
+      name: ${{ needs.set_environment_name.outputs.environment_name }}
     steps:
       - name: Register with credentials
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
-          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
-          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{needs.set_environment_name.outputs.environment_name}}
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
+          aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
+          aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ needs.set_environment_name.outputs.environment_name }}
+      - name: Download a single artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: pdf-files
       - name: Upload FR pdf
-        run: aws s3api list-object-versions --bucket ${{ secrets.AWS_S3_BUCKET }}
+        run: aws s3 cp /home/fr.pdf s3://${{ secrets.AWS_S3_BUCKET }}
+      - name: Upload EN pdf
+        run: aws s3 cp /home/en.pdf s3://${{ secrets.AWS_S3_BUCKET }}
