--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -67,6 +67,6 @@ jobs:
         with:
           name: pdf-files
       - name: Upload FR pdf
-        run: aws s3 cp /home/fr.pdf s3://${{ secrets.AWS_S3_BUCKET }}
+        run: aws s3 cp fr.pdf s3://${{ secrets.AWS_S3_BUCKET }}
       - name: Upload EN pdf
-        run: aws s3 cp /home/en.pdf s3://${{ secrets.AWS_S3_BUCKET }}
+        run: aws s3 cp en.pdf s3://${{ secrets.AWS_S3_BUCKET }}
