--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wasta-geek.github.io/curriculum-vitae" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  wasta-geek
 
+aws_s3_url: https://corentin-ducatez-resume-bucket-production.s3.eu-west-3.amazonaws.com
+
 ## Theme options
 show_downloads: true
 google_analytics: "G-163ZR9TR9F"
