--- a/docs/_config_dev.yml
+++ b/docs/_config_dev.yml
@@ -27,6 +27,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  wasta-geek
 
+aws_s3_url: https://corentin-ducatez-resume-bucket-staging.s3.eu-west-3.amazonaws.com
+
+
 ## Theme options
 show_downloads: true
 google_analytics: [Your Google Analytics tracking ID]
