Add source code link

--- a/docs/_data/ui.yml
+++ b/docs/_data/ui.yml
@@ -1,3 +1,6 @@
 download_pdf:
   en: Download as PDF document
   fr: Télécharger en document PDF
+go_to_source_code:
+  en: Go to source code
+  fr: Voir le code source
