--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,6 +29,8 @@ github_username:  wasta-geek
 
 aws_s3_url: https://corentin-ducatez-resume-bucket-production.s3.eu-west-3.amazonaws.com
 
+seek_a_job: true
+
 ## Theme options
 show_downloads: true
 google_analytics: "G-163ZR9TR9F"
