--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -20,7 +20,7 @@ jobs:
           id: terraform_plan
           continue-on-error: true
         - name: Update Pull Request
-          uses: actions/github-script@6
+          uses: actions/github-script@v6
           env:
             PLAN: "terraform\n${{ steps.terraform_plan.outputs.stdout }}"
           with:
