Fix path for terraform chdir

--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Terraform destroy
-        run: terraform -chdir=".terraform" destroy
+        run: terraform -chdir="terraform" destroy
