--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -10,13 +10,13 @@ jobs:
           uses: actions/checkout@v3
         - uses: hashicorp/setup-terraform@v2
         - name: Verify terraform files format
-          run: terraform -chdir=".terraform" fmt
+          run: terraform -chdir="terraform" fmt
         - name: Init terraform
-          run: terraform -chdir=".terraform" init
+          run: terraform -chdir="terraform" init
         - name: Check if terraform files are valids
-          run: terraform -chdir=".terraform" validate
+          run: terraform -chdir="terraform" validate
         - name: Terraform plan
-          run: terraform -chdir=".terraform" plan -input=false
+          run: terraform -chdir="terraform" plan -input=false
           id: terraform_plan
           continue-on-error: true
         - name: Update Pull Request
@@ -52,4 +52,4 @@ jobs:
           if: steps.terraform_plan.outcome == 'failure'
           run: exit 1
         - name: Terraform Apply
-          run: terraform -chdir=".terraform" apply -auto-approve -input=false
+          run: terraform -chdir="terraform" apply -auto-approve -input=false
