--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -20,10 +20,11 @@ jobs:
           id: terraform_validate
         - name: Terraform plan
           run: |
-            terraform -chdir="terraform" plan -input=false > output.txt 2>&1
+            terraform_output=$(terraform -chdir="terraform" plan -input=false 2>&1)
             error_status=$?
-            cat output.txt
-            echo "::set-output name=plan_log::$(cat output.txt)"
+            echo $terraform_output
+            echo "TEST TEST ALLO"
+            echo "::set-output name=plan_log::$terraform_output"
             exit $error_status
           id: terraform_plan
           continue-on-error: true
