--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -10,16 +10,16 @@ jobs:
           uses: actions/checkout@v3
         - uses: hashicorp/setup-terraform@v2
         - name: Verify terraform files format
-          run: terraform -chdir="terraform" fmt
+          run: terraform -chdir="terraform" fmt -check
           id: terraform_fmt
         - name: Init terraform
           run: terraform -chdir="terraform" init
           id: terraform_init
         - name: Check if terraform files are valids
-          run: terraform -chdir="terraform" validate
+          run: terraform -chdir="terraform" validate -no-color
           id: terraform_validate
         - name: Terraform plan
-          run: terraform -chdir="terraform" plan -input=false
+          run: terraform -chdir="terraform" plan -no-color -input=false
           id: terraform_plan
           continue-on-error: true
         - name: Update Pull Request
