--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -5,7 +5,16 @@ on:
   workflow_call:
 jobs:
   terraform:
+    environment: staging
     runs-on: ubuntu-latest
     steps:
+      - name: Prepare tfvars file with needed variables
+        run: |
+          echo "aws_credential = {
+              AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
+              AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
+            }
+
+            bucket_name = \"corentin-ducatez-${{ github.ref_name }}-bucket\"" > terraform/tmp_variables.tfvars
       - name: Terraform destroy
         run: terraform -chdir="terraform" destroy
