--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    ## We considers we're in staging environment
+    environment: staging
     steps:
         - name: Checkout files
           uses: actions/checkout@v3
@@ -18,15 +20,16 @@ jobs:
         - name: Check if terraform files are valids
           run: terraform -chdir="terraform" validate -no-color
           id: terraform_validate
-        - name: Terraform plan
+        - name: Prepare tfvars file with needed variables
           run: |
             echo "aws_credential = {
-                    AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
-                    AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
-                  }
+                AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
+                AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
+              }
 
-                  bucket_name = \"corentin-ducatez-${{ github.ref_name }}-bucket\"" > terraform/tmp_variables.tfvars
-            terraform -chdir="terraform" plan -no-color -input=false -var-file "tmp_variables.tfvars"
+              bucket_name = \"corentin-ducatez-${{ github.ref_name }}-bucket\"" > terraform/tmp_variables.tfvars
+        - name: Terraform plan
+          run: terraform -chdir="terraform" plan -no-color -input=false -var-file "tmp_variables.tfvars"
           id: terraform_plan
           continue-on-error: true
         - name: Update Pull Request
@@ -64,4 +67,4 @@ jobs:
           if: steps.terraform_plan.outcome == 'failure'
           run: exit 1
         - name: Terraform Apply
-          run: terraform -chdir="terraform" apply -auto-approve -input=false
+          run: terraform -chdir="terraform" apply -auto-approve -input=false -var-file "tmp_variables.tfvars"
