--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -22,12 +22,13 @@ jobs:
           id: terraform_validate
         - name: Prepare tfvars file with needed variables
           run: |
+            bucket_name="corentin-ducatez-${{ github.ref_name }}-bucket\"
             echo "aws_credential = {
                 AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
                 AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
               }
 
-              bucket_name = \"corentin-ducatez-${{ github.ref_name }}-bucket\"" > terraform/tmp_variables.tfvars
+            bucket_name = \"${bucket_name////-}" > terraform/tmp_variables.tfvars
         - name: Terraform plan
           run: terraform -chdir="terraform" plan -no-color -input=false -var-file "tmp_variables.tfvars"
           id: terraform_plan
