--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -22,7 +22,7 @@ jobs:
           id: terraform_validate
         - name: Prepare tfvars file with needed variables
           run: |
-            bucket_name="corentin-ducatez-${{ github.ref_name }}-bucket\"
+            bucket_name="corentin-ducatez-${{ github.ref_name }}-bucket"
             echo "aws_credential = {
                 AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
                 AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
