--- a/.github/workflows/deploy_site_s3.yml
+++ b/.github/workflows/deploy_site_s3.yml
@@ -53,7 +53,7 @@ jobs:
 
               </details>
 
-              Bucket is available at url: \`terraform -chdir="terraform" output -no-color website_endpoint\`
+              Bucket is available at url: \`$(terraform -chdir="terraform" output -no-color website_endpoint)\`
 
               *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
